kubernetes/apps/external-services/deluge/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: deluge
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.69.10.234
    ports:
      - name: http
        port: 8112
        protocol: TCP
