kubernetes/apps/external-services/deluge/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: false
    # external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.deluge
      hosts:
        - "deluge.${SECRET_DOMAIN}"

  rules:
    - host: deluge.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  name: http
